# bip47

./: CMakeLists.txt
cmake/: Findlibbitcoin.cmake
include/bip47/: contacts.hpp  hd.hpp  low.hpp  notification.hpp  patterns.hpp  payment_code.hpp  push_data.hpp  secret.hpp  versions.hpp
src/bip47/: designated.cpp  hd.cpp  low.cpp  mask.cpp  notification.cpp  patterns.cpp  payment_code.cpp  secret.cpp  versions.cpp
test/bip47/: designated_pubkey.cpp  hd.cpp  main.cpp  mask.cpp  payment_code.cpp  test_keys.cpp  test_keys.hpp
